--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.6",
     "@starknet-react/core": "^0.13.4",
-    "next": "12.1.0",
+    "next": "^12.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6"
   }
