--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "devDependencies": {
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
